Bart was correct, VM arguments were duplicated without any reason. Edited read me.